exception handling in createIndex 🤏🏻